<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.sample.barcode.com.sample.activities.ConfigActivity">

        <TextView
            android:id="@+id/tv_barcode_types_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/barcode_format_1d"
            android:textStyle="bold" />

        <View
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@id/tv_barcode_types_info"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark" />

        <CheckBox
            android:id="@+id/check_ean_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator"
            android:text="@string/ean_13" />

        <CheckBox
            android:id="@+id/check_ean_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_ean_13"
            android:text="@string/ean_8" />

        <CheckBox
            android:id="@+id/check_upc_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_ean_8"
            android:text="@string/upc_a" />

        <CheckBox
            android:id="@+id/check_upc_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_upc_a"
            android:text="@string/upc_e" />

        <CheckBox
            android:id="@+id/check_code_39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_upc_e"
            android:text="@string/code_39" />

        <CheckBox
            android:id="@+id/check_code_93"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_code_39"
            android:text="@string/code_93" />

        <CheckBox
            android:id="@+id/check_code_128"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_code_93"
            android:text="@string/code_128" />

        <CheckBox
            android:id="@+id/check_code_itf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_code_128"
            android:text="@string/code_itf" />

        <CheckBox
            android:id="@+id/check_code_codabar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_code_itf"
            android:text="@string/code_codabar" />

        <TextView
            android:id="@+id/tv_barcode_types2d_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_code_codabar"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="@string/barcode_format_2d"
            android:textStyle="bold" />

        <View
            android:id="@+id/separator2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@id/tv_barcode_types2d_info"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark" />

        <CheckBox
            android:id="@+id/check_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator2"
            android:text="@string/qr_code" />

        <CheckBox
            android:id="@+id/check_data_matrix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_qr_code"
            android:text="@string/data_matrix" />

        <CheckBox
            android:id="@+id/check_pdf_417"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_data_matrix"
            android:text="@string/pdf_417" />

        <CheckBox
            android:id="@+id/check_aztec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_pdf_417"
            android:text="@string/aztec" />

    </RelativeLayout>
</ScrollView>
